--- a/cmd/ODXT/config.json
+++ b/cmd/ODXT/config.json
@@ -1,9 +1,9 @@
 {
     "db": "Crime_USENIX_REV",
-    "phase": "cs",
+    "phase": "s",
     "group": "keywords_2.txt",
     "del_rate": 0,
-    "db_setup_from_files": false,
-    "xset_path": "./result/Update/ODXT/Crime_USENIX_REV_2024-09-26_19-04-53_XSet.bin",
-    "update_cnt_path": "./result/Update/ODXT/Crime_USENIX_REV_2024-09-26_19-04-53_UpdateCnt.json"
+    "db_setup_from_files": true,
+    "xset_path": "./result/Update/ODXT/Crime_USENIX_REV_2024-11-11_03-25-48_XSet.bin",
+    "update_cnt_path": "./result/Update/ODXT/Crime_USENIX_REV_2024-11-10_15-48-10_UpdateCnt.json"
 }
