--- a/cmd/ODXT/configs/config.json
+++ b/cmd/ODXT/configs/config.json
@@ -1,9 +1,6 @@
 {
     "db": "Crime_USENIX_REV",
-    "phase": "s",
+    "phase": "cs",
     "group": "keywords_2.txt",
-    "del_rate": 0,
-    "db_setup_from_files": true,
-    "xset_path": "./result/Update/ODXT/Crime_USENIX_REV/2024-11-23_21-06-52_XSet.bin",
-    "update_cnt_path": "./result/Update/ODXT/Crime_USENIX_REV/2024-11-23_21-06-52_UpdateCnt.json"
+    "del_rate": 0
 }
