--- a/cmd/ODXT/configs/config.json
+++ b/cmd/ODXT/configs/config.json
@@ -1,6 +1,6 @@
 {
     "db": "Crime_USENIX_REV",
     "phase": "cs",
-    "group": "keywords_2.txt",
+    "group": "w2_keywords_2.txt",
     "del_rate": 0
 }
