--- a/cmd/SDSSE-CQ/configs/config.json
+++ b/cmd/SDSSE-CQ/configs/config.json
@@ -1,6 +1,6 @@
 {
-    "db": "Crime_USENIX_REV",
+    "db": "sse",
     "phase": "cs",
-    "group": "keywords_2.txt",
+    "group": "keywords_2n.txt",
     "del_rate": 0
 }
