--- a/cmd/FDXT/configs/config.json
+++ b/cmd/FDXT/configs/config.json
@@ -1,6 +1,6 @@
 {
-    "db": "Crime_USENIX_REV",
+    "db": "Enron_USENIX",
     "phase": "cs",
-    "group": "keywords_2n_generated.txt",
+    "group": "Enron_USENIX_w2_keywords_2.txt",
     "del_rate": 0
 }
